--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "drizzle-orm": "^0.29.1",
     "lucide-react": "^0.297.0",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
