--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "migrate": "bun run src/lib/supabase/migration.ts"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "drizzle-kit": "^0.20.6",
     "eslint": "^8",
